--- a/package.json
+++ b/package.json
@@ -15,21 +15,42 @@
     "federalist:copy": "mkdir -p _site && rm -rf _site/* && cp -r public/* _site/"
   },
   "dependencies": {
+    "@rebass/grid": "^6.0.0-7",
+    "babel-plugin-styled-components": "^1.10.0",
+    "dotenv": "^7.0.0",
     "gatsby": "^2.25.3",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-plugin-manifest": "^2.7.0",
     "gatsby-plugin-netlify-cms": "^4.5.0",
     "gatsby-plugin-offline": "^3.5.0",
     "gatsby-plugin-react-helmet": "^3.5.0",
+    "gatsby-plugin-react-svg": "^2.1.1",
     "gatsby-plugin-sass": "^2.6.0",
+    "gatsby-plugin-sharp": "^2.0.30",
+    "gatsby-plugin-styled-components": "^3.0.4",
+    "gatsby-plugin-typescript": "^2.0.1",
+    "gatsby-plugin-typography": "^2.2.10",
     "gatsby-source-filesystem": "^2.6.1",
+    "gatsby-source-graphql": "^2.0.15",
+    "gatsby-transformer-json": "latest",
     "gatsby-transformer-remark": "^2.9.2",
+    "gatsby-transformer-sharp": "^2.1.17",
+    "graphql-birdseye": "^1.2.1",
+    "js-yaml": "latest",
     "netlify-cms-app": "^2.13.3",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-markdown": "^4.0.8",
+    "react-typography": "^0.16.19",
+    "require-yml": "^1.3.1",
+    "styled-components": "^4.1.2",
+    "styled-dropdown-component": "^3.0.1",
+    "typography": "^0.16.18",
+    "typography-plugin-code": "^0.16.18",
+    "typography-theme-github": "^0.16.19",
     "uswds": "^2.9.0"
   },
   "devDependencies": {
